Changing the tasks

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/favicon/favicon-48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Dream On Wheels" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
     <title>Dream On Weels - Твой мир для новых свершений</title>
     <script src="https://kit.fontawesome.com/b36538316f.js" defer></script>
     <script src="./js/libs/jquery/jquery.min.js" defer></script>
